--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "tts",
     "stt"
   ],
-  "homepage": "https://github.com/lobehub/lobchat",
+  "homepage": "https://github.com/",
   "bugs": {
     "url": "https://github.com/lobehub/lobe-chat/issues/new/choose"
   },
