--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   ],
   "homepage": "https://github.com/",
   "bugs": {
-    "url": "https://github.com/lobehub/lobe-chat/issues/new/choose"
+    "url": "https://github.com/"
   },
   "repository": {
     "type": "git",
