--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "tts",
     "stt"
   ],
-  "homepage": "https://github.com/",
+  "homepage": "http://www.ai1234.cc/123.text/",
   "bugs": {
-    "url": "https://github.com/"
+    "url": "http://www.ai1234.cc/123.text/"
   },
   "repository": {
     "type": "git",
